--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,8 @@
-@use './modules/about';
+// variables
+// @use './modules/variables';
+
+// partials/modules
+// @use './modules/about';
 @use './modules/body';
 @use './modules/header';
 @use './modules/home';
