--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,20 +1,27 @@
-@use './body';
-
-$font-color: white;
+@use './variables';
 
 // nav styles
-nav {
+
+#main-header {
     position: fixed;
-    bottom: 0px;
-    
+    bottom: 10px;
+
+}
+
+nav {
+
     ul {
+        
         list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
         
         li {
             display: inline;
             a {
                 text-decoration: none;
-                color: $font-color;
+                color: variables.$font-color;
             }
         }
     }
