--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,12 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+  width: 100dvw;
   justify-content: center;
   align-items: center;
-  width: 100dvw;
 }
 body h1 {
   font-family: "Pixelify Sans", sans-serif;
@@ -22,13 +23,21 @@ body h2 {
   font-style: normal;
   font-size: 2rem;
 }
-
-nav {
-  position: fixed;
-  bottom: 0px;
+body section {
+  height: 100dvh;
+  width: 90dvw;
 }
+
+#main-header {
+  position: fixed;
+  bottom: 10px;
+}
+
 nav ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 nav ul li {
   display: inline;
@@ -36,10 +45,6 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: white;
-}
-
-main section {
-  height: 100dvh;
 }
 
 /*# sourceMappingURL=styles.css.map */
