nav icons added

--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -2,13 +2,13 @@
 
 
 .slider-container {
-    
+
     max-width: 100dvw;
     position: relative;
     margin: auto;
 
     .my-slides {
-        display: none;
+        display: inline-block;
     }
 
 
