--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -1,3 +1,11 @@
-main {
+@use '../modules/variables';
+
+section#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
 
 }
