--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -22,7 +22,18 @@ nav {
             a {
                 text-decoration: none;
                 color: variables.$font-color;
+                text-transform: uppercase;
             }
+
+
+            .material-symbols-outlined {
+                font-variation-settings:
+                'FILL' 0,
+                'wght' 400,
+                'GRAD' 0,
+                'opsz' 24
+            }
+
         }
     }
 }
