--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -3,13 +3,41 @@
 
 .slider-container {
 
-    max-width: 100dvw;
+    max-width: 1000px;
     position: relative;
     margin: auto;
+    display: flex;
+    flex-direction: row;
 
     .my-slides {
-        display: inline-block;
+        display: none;
     }
+
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+      }
+
+      /* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
 
 
 }
