--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -2,10 +2,12 @@
 
 // nav styles
 
-#main-header {
+.site-nav {
     position: fixed;
     bottom: 10px;
-
+    height: 50px;
+    background-color: rgb(248, 96, 121);
+    z-index: 1;
 }
 
 nav {
@@ -24,7 +26,6 @@ nav {
                 color: variables.$font-color;
                 text-transform: uppercase;
             }
-
 
             .material-symbols-outlined {
                 font-variation-settings:
