--- a/scss/modules/_home.scss
+++ b/scss/modules/_home.scss
@@ -1,11 +1,9 @@
 @use '../modules/variables';
 
-section#home {
+#home {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-
 
 }
