--- a/scss/styles.css
+++ b/scss/styles.css
@@ -7,7 +7,6 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  width: 100dvw;
   justify-content: center;
   align-items: center;
 }
@@ -23,14 +22,16 @@ body h2 {
   font-style: normal;
   font-size: 2rem;
 }
-body section {
+body div#home, body div#about, body div#projects, body div#contact {
   height: 100dvh;
-  width: 90dvw;
 }
 
-#main-header {
+.site-nav {
   position: fixed;
   bottom: 10px;
+  height: 50px;
+  background-color: rgb(248, 96, 121);
+  z-index: 1;
 }
 
 nav ul {
@@ -51,7 +52,7 @@ nav ul li .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
-section#home {
+#home {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -59,12 +60,37 @@ section#home {
 }
 
 .slider-container {
-  max-width: 100dvw;
+  max-width: 1000px;
   position: relative;
   margin: auto;
+  display: flex;
+  flex-direction: row;
+  /* Position the "next button" to the right */
+  /* On hover, add a black background color with a little bit see-through */
 }
 .slider-container .my-slides {
-  display: inline-block;
+  display: none;
+}
+.slider-container .prev, .slider-container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+.slider-container .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.slider-container .prev:hover, .slider-container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /*# sourceMappingURL=styles.css.map */
