--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -1,5 +1,10 @@
 @use '../modules/variables';
 
+.arrows-right {
+  text-align: center;
+}
+
+
 
 .slider-container {
 
@@ -11,6 +16,11 @@
 
     .my-slides {
         display: none;
+        // background-color: pink;
+
+        .about-header, .about-text {
+          padding: 0rem 3rem 0rem 4rem;
+        }
     }
 
     .prev, .next {
@@ -19,26 +29,32 @@
         top: 50%;
         width: auto;
         margin-top: -22px;
-        padding: 16px;
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
+        padding: .5rem;
+        color: variables.$font-color;
+        font-family: variables.$header-font;
+        font-size: 3rem;
         transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
         user-select: none;
       }
 
       /* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
+    .next {
+        right: 0;
+      }
   
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
+    /* On hover, add a black background color with a little bit see-through */
+    // .prev:hover, .next:hover {
+    //   background-color: rgba(0,0,0,0.8);
+    // }
 
-
+    .fade {
+      animation-name: fade;
+      animation-duration: 3s;
+    }
+    
+    @keyframes fade {
+      from {opacity: .2}
+      to {opacity: 1}
+    }
 }
 
