--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -2,12 +2,19 @@
 
 // nav styles
 
+#main-header {
+    height: 50px;
+    width: 300px;
+}
+
 .site-nav {
     position: fixed;
-    bottom: 10px;
-    height: 50px;
-    background-color: rgb(248, 96, 121);
+    bottom: 0px;
+    background-color: variables.$bg-color;
     z-index: 1;
+    padding: .5rem 1rem;
+    border: 2px solid white;
+    // border-radius: 15px 15px 0px 0px;
 }
 
 nav {
