--- a/scss/styles.css
+++ b/scss/styles.css
@@ -26,12 +26,18 @@ body div#home, body div#about, body div#projects, body div#contact {
   height: 100dvh;
 }
 
+#main-header {
+  height: 50px;
+  width: 300px;
+}
+
 .site-nav {
   position: fixed;
-  bottom: 10px;
-  height: 50px;
-  background-color: rgb(248, 96, 121);
+  bottom: 0px;
+  background-color: black;
   z-index: 1;
+  padding: 0.5rem 1rem;
+  border: 2px solid white;
 }
 
 nav ul {
@@ -59,6 +65,10 @@ nav ul li .material-symbols-outlined {
   align-items: center;
 }
 
+.arrows-right {
+  text-align: center;
+}
+
 .slider-container {
   max-width: 1000px;
   position: relative;
@@ -71,26 +81,36 @@ nav ul li .material-symbols-outlined {
 .slider-container .my-slides {
   display: none;
 }
+.slider-container .my-slides .about-header, .slider-container .my-slides .about-text {
+  padding: 0rem 3rem 0rem 4rem;
+}
 .slider-container .prev, .slider-container .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
   width: auto;
   margin-top: -22px;
-  padding: 16px;
+  padding: 0.5rem;
   color: white;
-  font-weight: bold;
-  font-size: 18px;
+  font-family: "Pixelify Sans", sans-serif;
+  font-size: 3rem;
   transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
 }
 .slider-container .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
-.slider-container .prev:hover, .slider-container .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.slider-container .fade {
+  animation-name: fade;
+  animation-duration: 3s;
+}
+@keyframes fade {
+  from {
+    opacity: 0.2;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
