--- a/scss/styles.css
+++ b/scss/styles.css
@@ -22,6 +22,11 @@ body h2 {
   font-style: normal;
   font-size: 2rem;
 }
+body h3 {
+  font-family: "Pixelify Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 body div#home, body div#about, body div#projects, body div#contact {
   height: 100dvh;
 }
