--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -1,5 +1,7 @@
 $bg-color: #00000D;
 $font-color: #E2B5E6;
+$pixel-border: #E64335;
+$link-color: #ACD6F5;
 $header-font: "Pixelify Sans", sans-serif;
 $header-font-weight: 400;
 $header-font-style: normal;
