--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,3 +8,6 @@
 @use './modules/home';
 @use './modules/about';
 @use './modules/bg';
+// single project styles
+@use './modules/single-images';
+@use './modules/single-border';
