--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -2,6 +2,11 @@
 
 // nav styles
 
+.top-header-home {
+    position: absolute;
+    top: 0;
+}
+
 #main-header {
     height: 50px;
     width: 300px;
