--- a/scss/modules/_single-images.scss
+++ b/scss/modules/_single-images.scss
@@ -2,7 +2,7 @@
 
 :root {
 	--pixel-bg: #E2B5E6; /* Inner background color */
-	--pixel-border: white; /* Inner border color: */
+	--pixel-border: #00000D; /* Inner border color: */
 	--pixel-border-2: #e79189; /* Middle border color: */
 	--pixel-border-3: var(--pixel-border); /* Outer border color */
 	--pixel: 0.5rem; /* Pixel size */
@@ -15,7 +15,7 @@
     .swiper-slide {
         text-align: center;
         display: flex;
-        background-color: variables.$font-color;
+        // background-color: variables.$font-color;
         justify-content: center;
         align-items: center;
 
@@ -40,15 +40,6 @@
 
       box-shadow:
 		
-	/* Inner Background Color */
-		0 calc(var(--pixel) * -3) 0 calc(var(--pixel) * -1) var(--pixel-bg),
-		0 calc(var(--pixel) * 3) 0 calc(var(--pixel) * -1) var(--pixel-bg),
-		0 calc(var(--pixel) * -6) 0 calc(var(--pixel) * -2) var(--pixel-bg),
-		0 calc(var(--pixel) * 6) 0 calc(var(--pixel) * -2) var(--pixel-bg),
-		0 calc(var(--pixel) * -9) 0 calc(var(--pixel) * -4) var(--pixel-bg),
-		0 calc(var(--pixel) * 9) 0 calc(var(--pixel) * -4) var(--pixel-bg),
-		0 calc(var(--pixel) * -12) 0 calc(var(--pixel) * -6) var(--pixel-bg),
-		0 calc(var(--pixel) * 12) 0 calc(var(--pixel) * -6) var(--pixel-bg),
 		
 	/* Pixel Border Layer 1 */
 		calc(var(--pixel) * -1) 0 0 0 var(--pixel-border),
