--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -10,6 +10,11 @@ $body-font: "Open Sans", sans-serif;
 $body-font-weight: 400;
 $body-font-style: normal;
 
+// breakpoints
+$breakpoint-small: 500px;
+$breakpoint-medium: 1000px;
+$breakpoint-big: 1200px;
+
 // background variables
 $cols: 12;
 $rows: 12;
