--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,5 +8,6 @@
 @use './modules/home';
 @use './modules/about';
 @use './modules/bg';
+@use './modules/projects';
 // single project styles
 @use './modules/single-images';
