--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -4,55 +4,29 @@
   text-align: center;
 }
 
-.slider-container {
-
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-
-    .my-slides {
-        display: none;
-        // background-color: pink;
-
-        .about-header, .about-text {
-          padding: 0rem 3rem 0rem 4rem;
-        }
-    }
-
-    .prev, .next {
-        cursor: pointer;
-        position: absolute;
-        top: 50%;
-        width: auto;
-        margin-top: -22px;
-        padding: .5rem;
-        color: variables.$font-color;
-        font-family: variables.$header-font;  
-        font-size: 3rem;
-        transition: 0.6s ease;
-        user-select: none;
-      }
-
-      /* Position the "next button" to the right */
-    .next {
-        right: 0;
-      }
-  
-    /* On hover, add a black background color with a little bit see-through */
-    // .prev:hover, .next:hover {
-    //   background-color: rgba(0,0,0,0.8);
-    // }
-
-    .fade {
-      animation-name: fade;
-      animation-duration: 3s;
-    }
-    
-    @keyframes fade {
-      from {opacity: .2}
-      to {opacity: 1}
-    }
+#about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 50;
 }
 
+.swiper {
+  max-height: 70dvh;
+  max-width: 60dvw;
+  
+  .swiper-slide {
+      // text-align: center;
+      display: flex;
+      flex-direction: column;
+      // background-color: variables.$font-color;
+      justify-content: center;
+      align-items: center;
+
+    }
+
+    .swiper-button-next, .swiper-button-prev {
+      color: white;
+    }
+  }
