--- a/scss/modules/_body.scss
+++ b/scss/modules/_body.scss
@@ -18,21 +18,44 @@ body {
 
     main {
         width: 80dvw;
-        background: linear-gradient(90deg, rgba(0,0,13,0.16288522244835435) 0%, rgba(0,0,13,0.675490264465161) 17%, rgba(0,0,13,0.7791317210477942) 35%, rgba(0,0,13,0.8071429255295868) 65%, rgba(0,0,13,0.7175070711878502) 84%, rgba(0,0,13,0) 100%);
+        z-index: 50;
     }
 
     h1 {
         font-family: variables.$header-font;
         font-weight: variables.$header-font-weight;
         font-style: variables.$header-font-style;
-        font-size: 4rem;
+        font-size: 2.5rem;
+
+        @media (min-width: variables.$breakpoint-small) {
+            font-size: 3rem;
+        }
+
+        @media (min-width: variables.$breakpoint-medium) {
+            font-size: 4rem;
+        }
+
+        @media (min-width: variables.$breakpoint-big) {
+            font-size: 5rem;
+        }
     }
 
     h2 {
         font-family: variables.$header-font;
         font-weight: variables.$header-font-weight;
         font-style: variables.$header-font-style;
-        font-size: 3rem;
+
+        @media (min-width: variables.$breakpoint-small) {
+            font-size: 2rem;
+        }
+
+        @media (min-width: variables.$breakpoint-medium) {
+            font-size: 3rem;
+        }
+
+        @media (min-width: variables.$breakpoint-big) {
+            font-size: 4rem;
+        }
     }
 
     h3 {
@@ -59,14 +82,15 @@ body {
     height: 100vh;
     max-height: 100vw;
     margin: 0 auto;
-    // display: flex;
+    display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     line-height: 0;
-    z-index: 2;
+    z-index: 100;
 }
 
-#bg-image {
+.bg-image {
+    // position: relative;
     width: calc(100% / 16 / 2);
     height: calc(100% / 9 / 2);
     opacity: 1;
