--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -1,9 +1,5 @@
 @use '../modules/variables';
 
-.arrows-right {
-  text-align: center;
-}
-
 #about {
   display: flex;
   flex-direction: column;
@@ -12,21 +8,10 @@
   z-index: 50;
 }
 
-.swiper {
-  max-height: 70dvh;
-  max-width: 60dvw;
-  
-  .swiper-slide {
-      // text-align: center;
-      display: flex;
-      flex-direction: column;
-      // background-color: variables.$font-color;
-      justify-content: center;
-      align-items: center;
+.arrows-right-div {
+  margin: 1rem 0rem;
 
-    }
-
-    .swiper-button-next, .swiper-button-prev {
-      color: white;
-    }
+  .arrows-right {
+    text-align: center;
   }
+}
