--- a/scss/modules/_projects.scss
+++ b/scss/modules/_projects.scss
@@ -1,10 +1,23 @@
 @use './variables';
 
 #projects {
-    // display: grid;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 50;
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+
+        #project-1, #project-2, #project-3 {
+            text-align: center;
+            img {
+                width: 250px;
+            }
+        }
+    }
 }
